Always display scrollbar to prevent navigation from jumping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ body {
 	font-weight: 400;
 	background: #080810;
 	color: #efeff8;
+	overflow-y: scroll;
 }
 
 h1,
